src/main/webapp/imcms/css/imcms-scrollbar.scss
.imcms-right-side__images-container::-webkit-scrollbar-track,
.imcms-right-side::-webkit-scrollbar-track {
    background-color: transparent;
}

.imcms-right-side__images-container::-webkit-scrollbar,
.imcms-right-side::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
	height: 6px;
}

.imcms-right-side__images-container::-webkit-scrollbar-thumb,
.imcms-right-side::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.imcms-left-side::-webkit-scrollbar-track {
    background-color: transparent;
}

.user-properties-content__properties::-webkit-scrollbar,
.imcms-left-side::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
}

.imcms-left-side::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.first-sub-files::-webkit-scrollbar-track,
.second-sub-files::-webkit-scrollbar-track,
.templates-data::-webkit-scrollbar-track,
.documents-data::-webkit-scrollbar-track,
.user-properties-content__properties::-webkit-scrollbar-track,
.imcms-modal-body__optional-box::-webkit-scrollbar-track,
.imcms-modal-body__view-box::-webkit-scrollbar-track {
    background-color: transparent;
}

.first-sub-files::-webkit-scrollbar,
.second-sub-files::-webkit-scrollbar,
.templates-data::-webkit-scrollbar,
.documents-data::-webkit-scrollbar,
.user-properties-content__properties::-webkit-scrollbar,
.imcms-modal-body__optional-box::-webkit-scrollbar,
.imcms-modal-body__view-box::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
    height: 6px;
}

.first-sub-files::-webkit-scrollbar-thumb,
.second-sub-files::-webkit-scrollbar-thumb,
.templates-data::-webkit-scrollbar-thumb,
.documents-data::-webkit-scrollbar-thumb,
.user-properties-content__properties::-webkit-scrollbar-thumb,
.imcms-modal-body__optional-box::-webkit-scrollbar-thumb,
.imcms-modal-body__view-box::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.imcms-content-manager__left-side::-webkit-scrollbar-thumb {
    background-color: #6c7383;
}

.imcms-drop-down-list__items::-webkit-scrollbar-track
.imcms-text-area__input::-webkit-scrollbar-track {
    background-color: transparent;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.imcms-drop-down-list__items::-webkit-scrollbar,
.imcms-text-area__input::-webkit-scrollbar {
    background-color: transparent;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    width: 6px;
}

.imcms-drop-down-list__items::-webkit-scrollbar-thumb,
.imcms-text-area__input::-webkit-scrollbar-thumb {
    background-color: #abacad;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.imcms-preview-img-area::-webkit-scrollbar-track,
.imcms-originally-img-area::-webkit-scrollbar-track,
.image-cropping-block::-webkit-scrollbar-track {
    background-color: transparent;
}

.imcms-preview-img-area::-webkit-scrollbar,
.imcms-originally-img-area::-webkit-scrollbar,
.image-cropping-block::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
    height: 6px;
}

.imcms-preview-img-area::-webkit-scrollbar-thumb,
.imcms-originally-img-area::-webkit-scrollbar-thumb,
.image-cropping-block::-webkit-scrollbar-thumb {
    background-color: #6c7383;
}

.imcms-editable-controls-area::-webkit-scrollbar-track,
.imcms-image_editor__right-side::-webkit-scrollbar-track{
    background-color: transparent;
}

.imcms-editable-controls-area::-webkit-scrollbar,
.imcms-image_editor__right-side::-webkit-scrollbar{
    background-color: transparent;
    width: 6px;
    height: 10px;
}

.imcms-editable-controls-area::-webkit-scrollbar-thumb,
.imcms-image_editor__right-side::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.image-exif-window .imcms-pop-up-modal__body::-webkit-scrollbar-thumb{
    background-color: #abacad;
}

.image-exif-window .imcms-pop-up-modal__body::-webkit-scrollbar-track{
    background-color: transparent;
}

.image-exif-window .imcms-pop-up-modal__body::-webkit-scrollbar{
    background-color: transparent;
    width: 6px;
    height: 6px;
}

.imcms-history-mode__entries::-webkit-scrollbar-track {
    background-color: transparent;
}

.imcms-history-mode__entries::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
    height: 10px;
}

.imcms-history-mode__entries::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.imcms-menu-list__items::-webkit-scrollbar-track {
    background-color: transparent;
}

.imcms-menu-list__items::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
    height: 6px;
}

.imcms-menu-list__items::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.imcms-document-list__items::-webkit-scrollbar-track {
    background-color: transparent;
}

.imcms-document-list__items::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
    height: 6px;
}

.imcms-document-list__items::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.imcms-users-search-result::-webkit-scrollbar-track,
.imcms-pop-up-modal::-webkit-scrollbar-track,
.imcms-info-page::-webkit-scrollbar-track {
    background-color: transparent;
}

.imcms-users-search-result::-webkit-scrollbar,
.imcms-pop-up-modal::-webkit-scrollbar,
.imcms-info-page::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
}

.imcms-users-search-result::-webkit-scrollbar-thumb,
.imcms-pop-up-modal::-webkit-scrollbar-thumb,
.imcms-info-page::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.roles-table::-webkit-scrollbar-track,
.rules-table-elements::-webkit-scrollbar-track {
    background-color: transparent;
}

.roles-table::-webkit-scrollbar,
.rules-table-elements::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
    height: 6px;
}

.roles-table::-webkit-scrollbar-thumb,
.rules-table-elements::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.templates-css-edit-area-container__edit-area::-webkit-scrollbar-thumb {
	background-color: #abacad;
}

.templates-css-edit-area-container__edit-area::-webkit-scrollbar-track {
	background-color: transparent;
}

.templates-css-edit-area-container__edit-area::-webkit-scrollbar {
	background-color: transparent;
	width: 6px;
	height: 6px;
}

.imcms-doc-version-table::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.imcms-doc-version-table::-webkit-scrollbar-track {
    background-color: transparent;
}

.imcms-doc-version-table::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
    height: 6px;
}

.imcms-doc-basket-table-block__table::-webkit-scrollbar-thumb {
    background-color: #abacad;
}

.imcms-doc-basket-table-block__table::-webkit-scrollbar-track {
    background-color: transparent;
}

.imcms-doc-basket-table-block__table::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
    height: 6px;
}

.imcms-import-entity-reference-manager-body__container::-webkit-scrollbar-thumb {
	background-color: #abacad;
}

.imcms-import-entity-reference-manager-body__container::-webkit-scrollbar-track {
	background-color: transparent;
}

.imcms-import-entity-reference-manager-body__container::-webkit-scrollbar{
	background-color: transparent;
	width: 6px;
	height: 6px;
}

.table-import-documents::-webkit-scrollbar-thumb{
	background-color: #abacad;
}

.table-import-documents::-webkit-scrollbar-track{
	background-color: transparent;
}

.table-import-documents::-webkit-scrollbar{
	background-color: transparent;
	width: 6px;
	height: 6px;
}

.edit-imported-documents-section .list-input .list-input__meta-id-list-select::-webkit-scrollbar-thumb,
.import-section .list-input .list-input__meta-id-list-select::-webkit-scrollbar-thumb,
.alias-control-section .list-input .list-input__meta-id-list-select::-webkit-scrollbar-thumb,
.import-entity-references-section .import-entity-references-section__import-entity-reference-container::-webkit-scrollbar-thumb{
    background-color: #abacad;
}

.edit-imported-documents-section .list-input .list-input__meta-id-list-select::-webkit-scrollbar-track,
.import-section .list-input .list-input__meta-id-list-select::-webkit-scrollbar-track,
.alias-control-section .list-input .list-input__meta-id-list-select::-webkit-scrollbar-track,
.import-entity-references-section .import-entity-references-section__import-entity-reference-container::-webkit-scrollbar-track {
    background-color: transparent;
}

.edit-imported-documents-section .list-input .list-input__meta-id-list-select::-webkit-scrollbar,
.import-section .list-input .list-input__meta-id-list-select::-webkit-scrollbar,
.alias-control-section .list-input .list-input__meta-id-list-select::-webkit-scrollbar,
.import-entity-references-section .import-entity-references-section__import-entity-reference-container::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
    height: 6px;
}

.sections-container__edit-area::-webkit-scrollbar-thumb{
    background-color: #abacad;
}
.sections-container__edit-area::-webkit-scrollbar-track{
    background-color: transparent;
}
.sections-container__edit-area::-webkit-scrollbar{
    background-color: transparent;
    width: 6px;
    height: 6px;
}

